--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
     "pretty-error": "2.0.2",
     "query-string": "4.2.3",
     "react": "15.3.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "15.3.2",
+    "react-router-bootstrap": "^0.23.1",
+    "react-slick": "^0.14.5",
     "sequelize": "3.25.0",
+    "slick-carousel": "^1.6.0",
     "source-map-support": "0.4.6",
     "sqlite3": "3.1.8",
     "universal-router": "2.0.0",
