--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "react-dom": "15.3.2",
     "react-router-bootstrap": "^0.23.1",
     "react-slick": "^0.14.5",
+    "react-swipe": "^5.0.6",
     "sequelize": "3.25.0",
     "slick-carousel": "^1.6.0",
     "source-map-support": "0.4.6",
     "sqlite3": "3.1.8",
+    "swipe-js-iso": "^2.0.3",
     "universal-router": "2.0.0",
     "whatwg-fetch": "1.0.0"
   },
@@ -61,6 +63,8 @@
     "babel-register": "^6.18.0",
     "babel-template": "^6.16.0",
     "babel-types": "^6.18.0",
+    "bootstrap-loader": "^1.3.2",
+    "bootstrap-sass": "^3.3.7",
     "browser-sync": "^2.17.5",
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
@@ -72,6 +76,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
     "extend": "^3.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gaze": "^1.1.2",
     "git-repository": "^0.1.4",
@@ -80,6 +85,7 @@
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
     "mocha": "^3.1.2",
+    "node-sass": "^4.0.0",
     "pixrem": "^3.0.2",
     "pleeease-filters": "^3.0.0",
     "postcss": "^5.2.5",
@@ -105,6 +111,7 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "redbox-react": "^1.3.3",
     "rimraf": "^2.5.4",
+    "sass-loader": "^4.1.0",
     "sinon": "^2.0.0-pre.3",
     "stylelint": "^7.5.0",
     "stylelint-config-standard": "^14.0.0",
