--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "graphiql": "0.7.8",
     "graphql": "0.7.2",
     "history": "4.4.0",
+    "importcss": "^1.0.2",
     "isomorphic-style-loader": "1.1.0",
     "jsonwebtoken": "7.1.9",
     "markdown-it": "8.1.0",
     "node-fetch": "1.6.3",
     "normalize.css": "5.0.0",
+    "nuka-carousel": "^2.0.3",
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
     "pretty-error": "2.0.2",
