--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "react": "15.3.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "15.3.2",
+    "react-redux": "^5.0.1",
     "react-router-bootstrap": "^0.23.1",
     "react-slick": "^0.14.5",
     "react-swipe": "^5.0.6",
+    "redux": "^3.6.0",
     "sequelize": "3.25.0",
     "slick-carousel": "^1.6.0",
     "source-map-support": "0.4.6",
